[FEATURE] (storage, user): add partial indexes for init storage and restore methods
