# src/modules/facilityUnitTypeOffering/facilityUnitTypeOffering.controller.ts
@@ -206,4 +206,27 @@ export class FacilityUnitTypeOfferingController extends Controller {
       data: null,
     };
   }
+
+  @Post('{id}/restore')
+  // @Security('bearerAuth')
+  // @Security('cookieAuth')
+  // TODO: Role authorization: SYSTEM_ADMIN, BUSINESS_OPS_MANAGER
+  @Middlewares(validateRequest({ params: offeringIdParamSchema }))
+  @Response<ApiErrorResponse>(400, 'Offering is not deleted or invalid ID')
+  @Response<ApiErrorResponse>(404, 'Offering not found')
+  public async restoreOffering(
+    @Path() id: string
+  ): Promise<ApiResponse<FacilityUnitTypeOfferingResponse>> {
+    const offering = await this.offeringService.restoreOffering(id);
+
+    return {
+      success: true,
+      statusCode: 200,
+      messageCode: MESSAGE_CODE.MESSAGE_CODE_003,
+      message: formatMessage(MESSAGE_CODE.MESSAGE_CODE_003, [
+        'Facility Unit Type Offering',
+      ]),
+      data: offering,
+    };
+  }
 }
